--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pl-PL">
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
-  <title>Czat od buta</title>
-  <script defer src="http://25.93.254.11:3000/socket.io/socket.io.js"></script>
+  <title>Real-time chat</title>
+  <script defer src="http://your_ip_address_goes_here:3000/socket.io/socket.io.js"></script>
   <script defer src="script.js"></script>
   <style>
     body {
@@ -48,7 +48,7 @@
     <div id="message-container"></div>
     <form id="send-container">
       <input type="text" id="message-input">
-      <button type="submit" id="send-button">Wyślij</button>
+      <button type="submit" id="send-button">Send</button>
     </form>
     </body>
 </html>
